# wai-ogc

./: .gitignore  .travis.yml  LICENSE  README.md  default.nix  stack.yaml  wai-ogc.cabal
spec/Network/Wai/: OgcSpec.hs
spec/Network/Wai/Ogc/: WmsSpec.hs
spec/Network/Wai/Ogc/Internal/: DurationSpec.hs
src/Network/Wai/: Ogc.hs
src/Network/Wai/Ogc/: Common.hs  Wms.hs
src/Network/Wai/Ogc/Internal/: Common.hs  Duration.hs
